# Starlight-PC

./: .env.example  .gitignore  README.md  eslint.config.js  package.json  plan.md  svelte.config.js  vite.config.ts
app/components/: AppHeader.vue
app/components/modspage/: ModCard.vue
app/composables/: useApp.ts
app/pages/: profiles.vue
app/pages/mods/: [id].vue  index.vue
app/types/: index.ts
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: download.rs  epic_commands.rs  finder.rs  game.rs  game_state.rs  init.rs  launch.rs  mod.rs  paths.rs  profiles.rs  profiles_backend.rs
src-tauri/src/utils/: epic_api.rs  finder.rs  game.rs  mod.rs
src/lib/: queries.ts  sidebar.svelte.ts
src/lib/api/: client.ts
src/lib/components/: Prose.svelte  StarBackground.svelte
src/lib/components/icons/: ArrowLeftIcon.svelte  ArrowRightIcon.svelte  ChevronRightIcon.svelte  CloseIcon.svelte  CompassIcon.svelte  HomeIcon.svelte  LibraryIcon.svelte  MaximizeIcon.svelte  MinimizeIcon.svelte  PlusIcon.svelte  RestoreIcon.svelte  SettingsIcon.svelte  StarlightIcon.svelte  index.ts
src/lib/components/layout/: AppShell.svelte
src/lib/components/shared/: Prose.svelte
src/lib/components/ui/breadcrumb/: auto-breadcrumb.svelte  index.ts
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/card/: card-footer.svelte  card.svelte
src/lib/components/ui/nav-button/: index.ts  nav-button.svelte
src/lib/components/ui/titlebar-buttons/: TitlebarButtons.svelte  index.ts
src/lib/features/mods/: queries.ts  schema.ts
src/lib/features/mods/components/: ModCard.svelte
src/lib/features/news/components/: NewsDetail.svelte
src/lib/features/profiles/: bepinex-download.ts  game-state-service.svelte.ts  install-progress.svelte.ts  launch-service.ts  mod-install-service.ts  profile-service.ts  queries.ts  schema.ts
src/lib/features/profiles/components/: AddToProfileDialog.svelte  CreateProfileDialog.svelte  ProfileCard.svelte
src/lib/features/settings/: epic-service.ts  queries.ts  schema.ts  settings-service.ts
src/lib/features/settings/components/: AmongUsPathDialog.svelte  EpicLoginDialog.svelte
src/lib/state/: sidebar.svelte.ts
src/lib/utils/: error-handler.ts  toast.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(app)/explore/: +page.svelte
src/routes/_components/: NewsCard.svelte
src/routes/explore/: +page.svelte
src/routes/settings/: +page.svelte
