[package]
name = "Starlight"
version = "0.0.4"
description = "Among Us mod manager"
authors = ["yanpla"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "starlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
log = "0.4"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde_json = "1.0.148"
once_cell = "1.21.3"
serde = "1.0.228"
home = "0.5.9"
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
