[package]
name = "Starlight"
version = "0.0.5"
description = "Among Us mod manager"
authors = ["yanpla"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "starlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
log = "0.4"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde_json = "1.0.148"
serde = "1.0.228"
home = "0.5.9"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "gzip", "deflate"] }
tokio = "1.48.0"
base64 = "0.22.1"
dirs = "6.0.0"
urlencoding = "2.1.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader"] }
