[package]
name = "Starlight"
version = "0.0.8"
description = "Among Us mod manager"
authors = ["yanpla"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "starlight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
log = "0.4"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
serde_json = "1.0.148"
serde = "1.0.228"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "gzip", "deflate", "stream"] }
base64 = "0.22.1"
urlencoding = "2.1.3"
keyring = "3.6.3"
flate2 = "1.1.5"
zip = "2"
futures-util = "0.3"
url = "2.5.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

[target.'cfg(target_os = "linux")'.dependencies]
home = "0.5.9"
keyring = { version = "3.6.3", features = ["linux-native"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = ["Win32_System_LibraryLoader"] }
keyring = { version = "3.6.3", features = ["windows-native"] }
